--- a/index.html
+++ b/index.html
@@ -23,7 +23,57 @@
         </div>
     </section>
     <main>
-
+        <section class="failure">
+            <div class="content">
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="content">
+                <h3 class="sec-title">My failures of <br><br> previous year</h3>
+                <p class="sec-desc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
+                    in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard
+                    McClintock.</p>
+                <ul>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular simply.</li>
+                    <li>Contrary to popular , is not simply.</li>
+                </ul>
+            </div>
+        </section>
+        <section class="plan-section">
+            <h3 class="plan-title">My Plans</h3>
+            <div class="plan">
+                <div class="card">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="card-title">Javascript</h3>
+                    <p class="card-desc">I want to start</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/web.png" alt="">
+                    <h3 class="card-title">Web Development</h3>
+                    <p class="card-desc">I want to start</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/smoke.png" alt="">
+                    <h3 class="card-title">Smoking Habit</h3>
+                    <p class="card-desc">I want to start</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/ecom.png" alt="">
+                    <h3 class="card-title">ecommerce</h3>
+                    <p class="card-desc">I want to start</p>
+                </div>
+            </div>
+        </section>
+        <section class="watch-section">
+            <div class="watch">
+                <h3 class="watch-title">
+                    Awlays keep a positive <br>mindset
+                </h3>
+                <button class="btn-primary">Call Now</button>
+            </div>
+        </section>
     </main>
 </body>
 
