--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </section>
         <section class="plan-section">
-            <h3 class="plan-title">My Plans</h3>
+            <h3 id="my-plan1" class="sec-title">My Plans</h3>
             <div class="plan">
                 <div class="card">
                     <img src="images/icons/js.png" alt="">
@@ -75,6 +75,25 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="foot">
+            <h3 class="foot-title">Future</h3>
+            <p class="foot-desc">There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered alteration in some form, by injected humour, or randomised words</p>
+            <p class="foot-desc">Email : info@gmail.com</p>
+            <p class="foot-desc">Phone : 01500 00 00 00</p>
+            <div class="social-links">
+                <a href=""><img src="images/icons/fb.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/youtube.png" alt=""></a>
+            </div>
+        </div>
+        <div class="foot sub-foot">
+            <h3 class="sub">Subscribe</h3>
+            <input type="email" name="" placeholder="Enter your email">
+            <button class="btn-primary">Subscribe</button>
+        </div>
+    </footer>
 </body>
 
 </html>
